include/petscdm.h

/*J
   DMType - String with the name of a PETSc `DM`. These are all the `DM` provided by PETSc.

   Level: beginner

   Note:
   These can be used with `DMSetType()` or the options database key `-dm_type` to set the specific data structures and algorithms to use with a specific `DM`.
   But more commonly one calls directly a constructor for a particular `DMType` such as `DMDACreate()`

.seealso: [](ch_dmbase), `DMSetType()`, `DMCreate()`, `DM`, `DMDACreate()`
J*/
typedef const char *DMType;
#define DMDA        "da"
#define DMCOMPOSITE "composite"
#define DMSLICED    "sliced"
#define DMSHELL     "shell"
#define DMPLEX      "plex"
#define DMREDUNDANT "redundant"
#define DMPATCH     "patch"
#define DMMOAB      "moab"
#define DMNETWORK   "network"
#define DMFOREST    "forest"
#define DMP4EST     "p4est"
#define DMP8EST     "p8est"
#define DMSWARM     "swarm"
#define DMPRODUCT   "product"
#define DMSTAG      "stag"
PETSC_EXTERN PetscErrorCode          DMCreate(MPI_Comm, DM *);
PETSC_EXTERN PetscErrorCode          DMClone(DM, DM *);
PETSC_EXTERN PetscErrorCode          DMSetType(DM, DMType);
PETSC_EXTERN PetscErrorCode          DMGetType(DM, DMType *);
PETSC_EXTERN PetscErrorCode DMView(DM, PetscViewer);
PETSC_EXTERN PetscErrorCode DMLoad(DM, PetscViewer);
PETSC_EXTERN PetscErrorCode DMDestroy(DM *);
PETSC_EXTERN PetscErrorCode DMCreateGlobalVector(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMCreateLocalVector(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMGetLocalVector(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMRestoreLocalVector(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMGetGlobalVector(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMRestoreGlobalVector(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMGetLocalToGlobalMapping(DM, ISLocalToGlobalMapping *);
PETSC_EXTERN PetscErrorCode DMGetBlockSize(DM, PetscInt *);
PETSC_EXTERN PetscErrorCode DMCreateMatrix(DM, Mat *);
PETSC_EXTERN PetscErrorCode DMCreateInterpolation(DM, DM, Mat *, Vec *);
PETSC_EXTERN PetscErrorCode DMCreateRestriction(DM, DM, Mat *);
PETSC_EXTERN PetscErrorCode DMCreateInjection(DM, DM, Mat *);
PETSC_EXTERN PetscErrorCode DMCreateMassMatrix(DM, DM, Mat *);
PETSC_EXTERN PetscErrorCode DMRefine(DM, MPI_Comm, DM *);
PETSC_EXTERN PetscErrorCode DMCoarsen(DM, MPI_Comm, DM *);
PETSC_EXTERN PetscErrorCode DMRefineHierarchy(DM, PetscInt, DM[]);
PETSC_EXTERN PetscErrorCode DMCoarsenHierarchy(DM, PetscInt, DM[]);
PETSC_EXTERN PetscErrorCode DMCoarsenHookAdd(DM, PetscErrorCode (*)(DM, DM, PetscCtx), PetscErrorCode (*)(DM, Mat, Vec, Mat, DM, PetscCtx), PetscCtx);
PETSC_EXTERN PetscErrorCode DMSetFromOptions(DM);
PETSC_EXTERN PetscErrorCode DMViewFromOptions(DM, PetscObject, const char[]);
PETSC_EXTERN PetscErrorCode DMAdaptLabel(DM, DMLabel, DM *);
PETSC_EXTERN PetscErrorCode DMAdaptMetric(DM, Vec, DMLabel, DMLabel, DM *);
PETSC_EXTERN PetscErrorCode DMSetUp(DM);
PETSC_EXTERN PetscErrorCode DMGlobalToLocalBegin(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMGlobalToLocalEnd(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMLocalToGlobalBegin(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMLocalToGlobalEnd(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMLocalToLocalBegin(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMLocalToLocalEnd(DM, Vec, InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMConvert(DM, DMType, DM *);
/* Topology support */
PETSC_EXTERN PetscErrorCode DMGetDimension(DM, PetscInt *);
PETSC_EXTERN PetscErrorCode DMSetDimension(DM, PetscInt);
/* Coordinate support */
PETSC_EXTERN PetscErrorCode DMGetCoordinateDM(DM, DM *);
PETSC_EXTERN PetscErrorCode DMGetCoordinateDim(DM, PetscInt *);
PETSC_EXTERN PetscErrorCode DMSetCoordinateDim(DM, PetscInt);
PETSC_EXTERN PetscErrorCode DMGetCoordinateSection(DM, PetscSection *);
PETSC_EXTERN PetscErrorCode DMGetCoordinates(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMSetCoordinates(DM, Vec);
PETSC_EXTERN PetscErrorCode DMGetCoordinatesLocal(DM, Vec *);
PETSC_EXTERN PetscErrorCode DMSetCoordinatesLocal(DM, Vec);
PETSC_EXTERN PetscErrorCode DMLocalizeCoordinates(DM);
PETSC_EXTERN PetscErrorCode DMSetOptionsPrefix(DM, const char[]);
PETSC_EXTERN PetscErrorCode DMAppendOptionsPrefix(DM, const char[]);
PETSC_EXTERN PetscErrorCode DMGetOptionsPrefix(DM, const char *[]);
PETSC_EXTERN PetscErrorCode DMSetVecType(DM, VecType);
PETSC_EXTERN PetscErrorCode DMSetMatType(DM, MatType);
PETSC_EXTERN PetscErrorCode DMCreateSubDM(DM, PetscInt, const PetscInt[], IS *, DM *);
PETSC_EXTERN PetscErrorCode DMCreateFieldDecomposition(DM, PetscInt *, char ***, IS **, DM **);
PETSC_EXTERN PetscErrorCode DMGetRefineLevel(DM, PetscInt *);
PETSC_EXTERN PetscErrorCode DMSetRefineLevel(DM, PetscInt);
PETSC_EXTERN PetscErrorCode DMGetCoarsenLevel(DM, PetscInt *);
PETSC_EXTERN PetscErrorCode DMGetGlobalSection(DM, PetscSection *);
PETSC_EXTERN PetscErrorCode DMSetGlobalSection(DM, PetscSection);
static inline PETSC_DEPRECATED_FUNCTION(3, 23, 0, "DMGetLocalSection()", ) PetscErrorCode DMGetSection(DM dm, PetscSection *s)
{
  return DMGetLocalSection(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 23, 0, "DMSetLocalSection()", ) PetscErrorCode DMSetSection(DM dm, PetscSection s)
{
  return DMSetLocalSection(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 9, 0, "DMGetSection()", ) PetscErrorCode DMGetDefaultSection(DM dm, PetscSection *s)
{
  return DMGetLocalSection(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 9, 0, "DMSetSection()", ) PetscErrorCode DMSetDefaultSection(DM dm, PetscSection s)
{
  return DMSetLocalSection(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 9, 0, "DMGetGlobalSection()", ) PetscErrorCode DMGetDefaultGlobalSection(DM dm, PetscSection *s)
{
  return DMGetGlobalSection(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 9, 0, "DMSetGlobalSection()", ) PetscErrorCode DMSetDefaultGlobalSection(DM dm, PetscSection s)
{
  return DMSetGlobalSection(dm, s);
}
PETSC_EXTERN PetscErrorCode DMGetSectionSF(DM, PetscSF *);
PETSC_EXTERN PetscErrorCode DMSetSectionSF(DM, PetscSF);
PETSC_EXTERN PetscErrorCode DMCreateSectionSF(DM, PetscSection, PetscSection);
static inline PETSC_DEPRECATED_FUNCTION(3, 12, 0, "DMGetSectionSF()", ) PetscErrorCode DMGetDefaultSF(DM dm, PetscSF *s)
{
  return DMGetSectionSF(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 12, 0, "DMSetSectionSF()", ) PetscErrorCode DMSetDefaultSF(DM dm, PetscSF s)
{
  return DMSetSectionSF(dm, s);
}
static inline PETSC_DEPRECATED_FUNCTION(3, 12, 0, "DMCreateSectionSF()", ) PetscErrorCode DMCreateDefaultSF(DM dm, PetscSection l, PetscSection g)
{
  return DMCreateSectionSF(dm, l, g);
}
PETSC_EXTERN PetscErrorCode DMGetPointSF(DM, PetscSF *);
PETSC_EXTERN PetscErrorCode DMSetPointSF(DM, PetscSF);
PETSC_EXTERN PetscErrorCode DMGetNumFields(DM, PetscInt *);
PETSC_EXTERN PetscErrorCode DMSetNumFields(DM, PetscInt);
PETSC_EXTERN PetscErrorCode DMGetField(DM, PetscInt, DMLabel *, PetscObject *);
PETSC_EXTERN PetscErrorCode DMSetField(DM, PetscInt, DMLabel, PetscObject);
PETSC_EXTERN PetscErrorCode DMAddField(DM, DMLabel, PetscObject);
PETSC_EXTERN PetscErrorCode DMClearFields(DM);
PETSC_EXTERN PetscErrorCode DMCopyFields(DM, PetscInt, PetscInt, DM);
PETSC_EXTERN PetscErrorCode DMGetAdjacency(DM, PetscInt, PetscBool *, PetscBool *);
PETSC_EXTERN PetscErrorCode DMSetAdjacency(DM, PetscInt, PetscBool, PetscBool);
PETSC_EXTERN PetscErrorCode DMGetBasicAdjacency(DM, PetscBool *, PetscBool *);
PETSC_EXTERN PetscErrorCode DMSetBasicAdjacency(DM, PetscBool, PetscBool);
PETSC_EXTERN PetscErrorCode DMGetDS(DM, PetscDS *);
PETSC_EXTERN PetscErrorCode DMCreateDS(DM);
PETSC_EXTERN PetscErrorCode DMClearDS(DM);
PETSC_EXTERN PetscErrorCode DMCopyDS(DM, PetscInt, PetscInt, DM);
PETSC_EXTERN PetscErrorCode DMCopyDisc(DM, DM);
PETSC_EXTERN PetscErrorCode DMGetAuxiliaryVec(DM, DMLabel, PetscInt, PetscInt, Vec *);
PETSC_EXTERN PetscErrorCode DMSetAuxiliaryVec(DM, DMLabel, PetscInt, PetscInt, Vec);
PETSC_EXTERN PetscErrorCode DMCreateLabel(DM, const char[]);
PETSC_EXTERN PetscErrorCode DMGetLabelValue(DM, const char[], PetscInt, PetscInt *);
PETSC_EXTERN PetscErrorCode DMSetLabelValue(DM, const char[], PetscInt, PetscInt);
PETSC_EXTERN PetscErrorCode DMClearLabelValue(DM, const char[], PetscInt, PetscInt);
PETSC_EXTERN PetscErrorCode DMGetLabelSize(DM, const char[], PetscInt *);
PETSC_EXTERN PetscErrorCode DMGetLabelIdIS(DM, const char[], IS *);
PETSC_EXTERN PetscErrorCode DMGetStratumSize(DM, const char[], PetscInt, PetscInt *);
PETSC_EXTERN PetscErrorCode DMGetStratumIS(DM, const char[], PetscInt, IS *);
PETSC_EXTERN PetscErrorCode DMClearLabelStratum(DM, const char[], PetscInt);
PETSC_EXTERN PetscErrorCode DMGetLabelOutput(DM, const char[], PetscBool *);
PETSC_EXTERN PetscErrorCode DMSetLabelOutput(DM, const char[], PetscBool);
/*E
   DMCopyLabelsMode - Determines how `DMCopyLabels()` behaves when there is a `DMLabel` in the source and destination `DM`s with the same name

   Values:
+  `DM_COPY_LABELS_REPLACE` - replace label in destination by label from source
.  `DM_COPY_LABELS_KEEP`    - keep destination label
-  `DM_COPY_LABELS_FAIL`    - generate an error

   Level: advanced

.seealso: [](ch_dmbase), `DMLabel`, `DM`, `DMCompareLabels()`, `DMRemoveLabel()`
E*/
typedef enum {
  DM_COPY_LABELS_REPLACE,
  DM_COPY_LABELS_KEEP,
  DM_COPY_LABELS_FAIL
} DMCopyLabelsMode;
PETSC_EXTERN PetscErrorCode DMGetNumLabels(DM, PetscInt *);
PETSC_EXTERN PetscErrorCode DMGetLabelName(DM, PetscInt, const char *[]);
PETSC_EXTERN PetscErrorCode DMHasLabel(DM, const char[], PetscBool *);
PETSC_EXTERN PetscErrorCode DMGetLabel(DM, const char *, DMLabel *);
PETSC_EXTERN PetscErrorCode DMAddLabel(DM, DMLabel);
PETSC_EXTERN PetscErrorCode DMRemoveLabel(DM, const char[], DMLabel *);
PETSC_EXTERN PetscErrorCode DMCopyLabels(DM, DM, PetscCopyMode, PetscBool, DMCopyLabelsMode);
PETSC_EXTERN PetscErrorCode DMProjectFieldLocal(DM, PetscReal, Vec, void (**)(PetscInt, PetscInt, PetscInt, const PetscInt[], const PetscInt[], const PetscScalar[], const PetscScalar[], const PetscScalar[], const PetscInt[], const PetscInt[], const PetscScalar[], const PetscScalar[], const PetscScalar[], PetscReal, const PetscReal[], PetscInt, const PetscScalar[], PetscScalar[]), InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMProjectFieldLabel(DM, PetscReal, DMLabel, PetscInt, const PetscInt[], PetscInt, const PetscInt[], Vec, void (**)(PetscInt, PetscInt, PetscInt, const PetscInt[], const PetscInt[], const PetscScalar[], const PetscScalar[], const PetscScalar[], const PetscInt[], const PetscInt[], const PetscScalar[], const PetscScalar[], const PetscScalar[], PetscReal, const PetscReal[], PetscInt, const PetscScalar[], PetscScalar[]), InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMProjectFieldLabelLocal(DM, PetscReal, DMLabel, PetscInt, const PetscInt[], PetscInt, const PetscInt[], Vec, void (**)(PetscInt, PetscInt, PetscInt, const PetscInt[], const PetscInt[], const PetscScalar[], const PetscScalar[], const PetscScalar[], const PetscInt[], const PetscInt[], const PetscScalar[], const PetscScalar[], const PetscScalar[], PetscReal, const PetscReal[], PetscInt, const PetscScalar[], PetscScalar[]), InsertMode, Vec);
PETSC_EXTERN PetscErrorCode DMProjectBdFieldLabelLocal(DM, PetscReal, DMLabel, PetscInt, const PetscInt[], PetscInt, const PetscInt[], Vec, void (**)(PetscInt, PetscInt, PetscInt, const PetscInt[], const PetscInt[], const PetscScalar[], const PetscScalar[], const PetscScalar[], const PetscInt[], const PetscInt[], const PetscScalar[], const PetscScalar[], const PetscScalar[], PetscReal, const PetscReal[], const PetscReal[], PetscInt, const PetscScalar[], PetscScalar[]), InsertMode, Vec);